bin/tests/errors_parser/parser/parser_err_unexpected_token.swg
#global fileprivate

} // swc-expected-error {{parser_err_unexpected_token}}
